# iron-man

./: .gitignore  README.md
c/: CMakeLists.txt  Dockerfile  consts.h  consts.h.ini  custom_sections.lds  main.c  result.h
c/commands/: commands.c  commands.h
c/commands/get_file/: get_file.c  get_file.h
c/commands/put_file/: put_file.c  put_file.h
c/commands/run_shell/: run_shell.c  run_shell.h
c/communication/: buffer.c  buffer.h  connection.c  connection.h
c/functions/: functions.c  functions.h  functions.h.ini
c/logging/: logging.c  logging.h
c/modules/: module.c  module.h
c/modules/math/: difference.c  difference.h  sum.c  sum.h
c/strings/: strings.c  strings.h  strings.h.ini
c/tiny-aes/: aes.c  aes.h
python/: example.py  iron_cmd.py  iron_man.py  main.py  struct_conversion.py  tiny_aes.py
python/building/: encrypt_builtin_commands.py  encrypt_module_commands.py  generate_consts.py  generate_encrypted_strings.py  generate_functions_loading.py  post_build.py  randoms_generator.py  strings_encryption.py
